--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,29 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Ionic Blank
+      MBAcam
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <ion-text color="dark" *ngIf="images.length == 0" >
+    <h4>Adicione imagens nos botões abaixo</h4>
+  </ion-text>
+  <ion-list>
+      <ion-item *ngFor="let image of images">
+        <img src="{{image}}"/>
+      </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer padding>
+  <ion-button fill="solid" expand="full" (click)="adicionarCamera()">
+    <ion-icon slot="start" name="camera"></ion-icon>
+    Câmera
+  </ion-button>
+  <ion-button fill="solid" expand="full" (click)="adicionarGaleria()">
+    <ion-icon slot="start" name="folder-open"></ion-icon>
+    Galeria
+  </ion-button>
+</ion-footer>
